bridge/base/node-api-deployment.yaml
#! node-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: node-api
    namespace: confetti-server
    labels:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: node-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: confetti_server
            com.docker.compose.service: node-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: confetti_server
                com.docker.compose.service: node-api
                com.docker.compose.network.confetti-network: "true"
        spec:
            containers:
                - name: confetti-node-api
                  image: confetti_server-node-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: node-api-9600
                      containerPort: 9600
                  volumeMounts:
                    - name: usr-src-app-src-node
                      mountPath: /usr/src/app/src/node
                    - name: usr-src-app-node-modules
                      mountPath: /usr/src/app/node_modules
            volumes:
                - name: usr-src-app-src-node
                  hostPath:
                    path: /Users/Apple/projects/confetti_server/src/node
                - name: usr-src-app-node-modules
                  persistentVolumeClaim:
                    claimName: node-api-node-modules
