bridge/base/postgres-deployment.yaml
#! postgres-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: confetti-server
    labels:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: confetti_server
            com.docker.compose.service: postgres
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: confetti_server
                com.docker.compose.service: postgres
                com.docker.compose.network.confetti-network: "true"
        spec:
            containers:
                - name: confetti-postgres
                  image: postgres:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: postgres-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: postgres-postgres-data
