bridge/base/mongodb-service.yaml
# check if there is at least one published port

#! mongodb-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mongodb-published
    namespace: confetti-server
    labels:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: mongodb
spec:
    selector:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: mongodb
    ports:
        - name: mongodb-27018
          port: 27018
          protocol: TCP
          targetPort: mongodb-27017

# check if there is at least one published port
