bridge/base/python-api-expose.yaml
#! python-api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: python-api
    namespace: confetti-server
    labels:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: python-api
spec:
    selector:
        com.docker.compose.project: confetti_server
        com.docker.compose.service: python-api
    ports:
        - name: python-api-5600
          port: 5600
          targetPort: python-api-5600
