bridge/base/confetti-network-network-policy.yaml
#! confetti-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: confetti-network-network-policy
    namespace: confetti-server
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.confetti-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.confetti-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.confetti-network: "true"
